# test

./: .env.example  .gitignore  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml
apps/api/: Dockerfile  go.mod  go.sum
apps/web/: Dockerfile  index.html  package.json  tsconfig.json
apps/web/src/: main.tsx  styles.css
configs/: local.yaml  models.yaml  topics.yaml
docs/: architecture.md  architecture.mmd  cad_json.md  development_plan.md  dxf_layers.md  model_contracts.md
infra/minio/: .keep
infra/nginx/: drawing2dxf.conf
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/redpanda/: .keep
scripts/: create_bucket.sh  create_test_batch.sh  dev_seed.go  run_local_pipeline.sh
services-python/: Dockerfile.base
services-python/common/: pyproject.toml
services-python/common/drawing2dxf_common/: __init__.py  config.py  kafka_client.py  logging.py  schemas.py  service.py  storage.py
services-python/dxf-export-service/: Dockerfile  pyproject.toml
services-python/dxf-export-service/app/: cadjson_to_dxf.py  kompas_layers.py  main.py  render_preview.py
services-python/dxf-export-service/tests/: test_dxf_export.py
services-python/geometry-service/: Dockerfile  pyproject.toml
services-python/geometry-service/app/: arc_fit.py  break_symbols.py  cadjson_builder.py  circle_fit.py  graph.py  line_fit.py  main.py  skeleton.py  snapping.py
services-python/geometry-service/tests/: test_geometry.py
services-python/model-router-service/: Dockerfile  pyproject.toml
services-python/model-router-service/app/: main.py  mock_router.py  page_router.py  yolo_router_interface.py
services-python/ocr-service/: Dockerfile  pyproject.toml
services-python/ocr-service/app/: dimension_parser.py  gost_parser.py  main.py  mock_ocr.py  paddleocr_interface.py
services-python/ocr-service/tests/: test_dimension_parser.py
services-python/preprocess-service/: Dockerfile  pyproject.toml
services-python/preprocess-service/app/: binarize.py  denoise.py  deskew.py  frame_crop.py  main.py  preprocess.py  quality.py
services-python/qa-service/: Dockerfile  pyproject.toml
services-python/qa-service/app/: compare.py  heatmap.py  main.py  metrics.py  rasterize.py
services-python/sam-assist-service/: Dockerfile  pyproject.toml
services-python/sam-assist-service/app/: main.py  mock_sam.py  sam21_interface.py
services-python/segmentation-service/: Dockerfile  pyproject.toml
services-python/segmentation-service/app/: main.py  masks.py  mock_segmenter.py  yolo11_segmenter_interface.py
services-python/vlm-review-service/: Dockerfile  pyproject.toml
services-python/vlm-review-service/app/: main.py  mock_vlm.py  (+1 more)
tests/e2e/: README.md
tests/integration/: README.md
workers-go/export-packager/: Dockerfile  go.mod  go.sum
workers-go/ingest-worker/: Dockerfile  go.mod  go.sum
(+67 files in other folders)
