[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drawing2dxf-common"
version = "0.1.0"
description = "Shared utilities for drawing2dxf python services"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7,<3",
  "structlog>=24.1",
  "minio>=7.2,<8",
  "confluent-kafka>=2.5,<3",
  "PyYAML>=6.0,<7",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "prometheus-client>=0.20,<1",
  "psycopg[binary]>=3.2,<4",
]

[tool.setuptools.packages.find]
include = ["drawing2dxf_common*"]
