[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drawing2dxf-dxf-export"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "drawing2dxf-common",
  "ezdxf>=1.3,<2",
  "Pillow>=10.4",
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["app*"]
